src/main/java/com/example/zavodliva/user/errors/UserNotFoundException.java
package com.example.zavodliva.user.errors;

public class UserNotFoundException extends RuntimeException {

	public UserNotFoundException(String message) {
		super(message);
		
	}

	

}
